--- a/students/Will/code_unification.ipynb
+++ b/students/Will/code_unification.ipynb
@@ -10,12 +10,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "42f6ef42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sympy"
+    "# COMBINING STOICHIOMETRIC MATRICES CLASS\n",
+    "\n",
+    "class CombinedSM:\n",
+    "     \n",
+    "    def __init__(self, mod1, mod2):\n",
+    "        \n",
+    "        self.mod1 = mod1\n",
+    "        self.mod2 = mod2\n",
+    "\n",
+    "        self.find_matching_species()\n",
+    "        self.find_conjugated_rows()  \n",
+    "\n",
+    "        \n",
+    "    def find_matching_species(self):  # adpated from JW\n",
+    "        \"\"\"\n",
+    "        Find indices of matching external species between mod1 and mod2.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        # Removes all species corresponding to the internal species in the list of species (by taking those after the \n",
+    "        # no. of rows in the internal SM) and stores the index (from 0) and name of the external species\n",
+    "        # essentially creates a dictionary of external species\n",
+    "\n",
+    "        self.mod1_external_species_list = {\n",
+    "            i: v for i, v in enumerate(list(self.mod1.labels.values())[self.mod1.internal_SM.rows:])\n",
+    "        }\n",
+    "        self.mod2_external_species_list = {\n",
+    "            i: v for i, v in enumerate(list(self.mod2.labels.values())[self.mod2.internal_SM.rows:])\n",
+    "        }\n",
+    "        # print(self.mod1_external_species_list)\n",
+    "        # print(self.mod2_external_species_list)\n",
+    "        # takes the dictionary of external species and finds the indices in each dict at which the species are the same\n",
+    "        # , stores in the list self.matching_species\n",
+    "\n",
+    "        self.matching_species = []\n",
+    "        for key1, value1 in self.mod1_external_species_list.items():\n",
+    "            for key2, value2 in self.mod2_external_species_list.items():\n",
+    "                if value1 == value2:\n",
+    "                    self.matching_species.append((key1, key2))\n",
+    "\n",
+    "        #  if there ARE overlapping species: convert the new list into two new lists of indexes and species names\n",
+    "        # print(self.matching_species)\n",
+    "\n",
+    "        if self.matching_species:\n",
+    "            self.keys_1, self.keys_2 = zip(*self.matching_species)\n",
+    "            self.keys_1 = list(self.keys_1)\n",
+    "            self.keys_2 = list(self.keys_2)\n",
+    "        else:\n",
+    "            self.keys_1, self.keys_2 = [], [] # returns an empty list overwise to prevent errors\n",
+    "\n",
+    "        # print(\"Keys:\")\n",
+    "        # print(len(self.keys_1))\n",
+    "        # print(self.keys_2)\n",
+    "        return self.keys_1, self.keys_2\n",
+    "\n",
+    "        # So now we know the position of overlapping species in the two dicts of species names defined outside the class\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def find_conjugated_rows(self):\n",
+    "        \n",
+    "        # Find the rows of the two SMs that correspond to the overlapping species determined earlier\n",
+    "\n",
+    "        overlapping_species_rows_mod1 = []\n",
+    "\n",
+    "        for i in range(len(self.keys_1)):\n",
+    "\n",
+    "            overlapping_species_rows_mod1.append((self.mod1.matrix)[self.keys_1[i] + self.mod1.num_internal_species, :])\n",
+    "\n",
+    "        # print(\"overlapping species row for mod1: \")\n",
+    "        # print(overlapping_species_rows_mod1)\n",
+    "\n",
+    "        overlapping_species_rows_mod2 = []\n",
+    "\n",
+    "        for i in range(len(self.keys_1)):\n",
+    "\n",
+    "            overlapping_species_rows_mod2.append((self.mod2.matrix)[self.keys_2[i] + self.mod2.num_internal_species, :])\n",
+    "\n",
+    "        # print(\"overlapping species row for mod2: \")\n",
+    "        # print(overlapping_species_rows_mod2)\n",
+    "\n",
+    "        # conjugate the two rows for each overalpping species:\n",
+    "\n",
+    "        conjugated_rows = []\n",
+    "\n",
+    "        for k in range(len(self.keys_1)):\n",
+    "\n",
+    "            conjugated_rows.append(overlapping_species_rows_mod1[k].row_join(overlapping_species_rows_mod2[k]))\n",
+    "        \n",
+    "        self.conjugated_rows = conjugated_rows\n",
+    "\n",
+    "        return conjugated_rows\n",
+    "\n",
+    "\n",
+    "    def construct_new_SM(self):\n",
+    "\n",
+    "        num_cols_new_SM = self.mod1.matrix.cols + self.mod2.matrix.cols\n",
+    "        \n",
+    "\n",
+    "        # Create block 0 matrices for the internal part of the new SM\n",
+    "\n",
+    "        upper_right_internals = zeros(self.mod1.num_internal_species, num_cols_new_SM - self.mod1.matrix.cols)\n",
+    "        lower_left_internals = zeros(self.mod2.num_internal_species, num_cols_new_SM - self.mod2.matrix.cols)\n",
+    "\n",
+    "        # Create block 0 matrices for the external part of the new SM\n",
+    "\n",
+    "        upper_right_externals = zeros(self.mod1.matrix.rows - self.mod1.num_internal_species - len(self.conjugated_rows)\\\n",
+    "                                           , num_cols_new_SM - self.mod1.matrix.cols)\n",
+    "        \n",
+    "        lower_left_externals = zeros(self.mod2.matrix.rows - self.mod2.num_internal_species - len(self.conjugated_rows),\\\n",
+    "                                           num_cols_new_SM - self.mod2.matrix.cols)\n",
+    "\n",
+    "        \n",
+    "        # Use these to construct the new SM block by block\n",
+    "\n",
+    "        new_SM_line_1 = (self.mod1.internal_SM.row_join(upper_right_internals))\n",
+    "\n",
+    "        # The line that contains the conjugated rows goes here\n",
+    "        #========================================\n",
+    "        if not self.conjugated_rows:\n",
+    "\n",
+    "            use_line_2 = False\n",
+    "\n",
+    "        else:\n",
+    "\n",
+    "            use_line_2 = True\n",
+    "\n",
+    "            new_SM_line_2 = self.conjugated_rows[0]\n",
+    "            \n",
+    "            for vector in self.conjugated_rows[1:]:\n",
+    "                new_SM_line_2 = new_SM_line_2.col_join(vector)\n",
+    "                # print(\"Block containing overlapping species:\")\n",
+    "                # print(new_SM_line_2)\n",
+    "        #========================================\n",
+    "    \n",
+    "        new_SM_line_3 = lower_left_internals.row_join(self.mod2.internal_SM)\n",
+    "\n",
+    "        new_SM_line_4 = self.mod1.external_SM[[i for i in range(self.mod1.external_SM.rows) if i not in self.keys_1], :].row_join(\\\n",
+    "            upper_right_externals)\n",
+    "        \n",
+    "        new_SM_line_5 = (lower_left_externals).row_join(\\\n",
+    "            self.mod2.external_SM[[i for i in range(self.mod2.external_SM.rows) if i not in self.keys_2], :])\n",
+    "        \n",
+    "        # Final SM\n",
+    "\n",
+    "        if use_line_2:\n",
+    "\n",
+    "            new_SM = new_SM_line_1.col_join(new_SM_line_2).col_join(new_SM_line_3).col_join(new_SM_line_4).col_join(new_SM_line_5)\n",
+    "\n",
+    "        else:\n",
+    "\n",
+    "            new_SM = new_SM_line_1.col_join(new_SM_line_3).col_join(new_SM_line_4).col_join(new_SM_line_5)\n",
+    "\n",
+    "\n",
+    "\n",
+    "        return new_SM\n",
+    "    \n",
+    "    def construct_new_species_list(self):\n",
+    "\n",
+    "        \"\"\" This function returns a species list and dictionary with species names in the same order as they appear in \n",
+    "        the new SM \"\"\"\n",
+    "\n",
+    "        list_of_species = []\n",
+    "        internal_species_added = 0\n",
+    "\n",
+    "        # === internal species of mod1 ===\n",
+    "        \n",
+    "        for l in range(0, self.mod1.num_internal_species):\n",
+    "            \n",
+    "            if self.mod1.species_names[l] in list_of_species:\n",
+    "                l += 1\n",
+    "            else:\n",
+    "                list_of_species.append(self.mod1.species_names[l])\n",
+    "\n",
+    "                internal_species_added += 1\n",
+    "\n",
+    "\n",
+    "        # === find overlapping species names ===\n",
+    "\n",
+    "        for key in self.keys_1: # pick either keys1 or keys2, both correspond to same species \n",
+    "            \n",
+    "            if self.mod1.species_names[key + + self.mod1.num_internal_species] in list_of_species:\n",
+    "                l += 1\n",
+    "            else:\n",
+    "                list_of_species.append(self.mod1.species_names[key + self.mod1.num_internal_species])\n",
+    "\n",
+    "                internal_species_added += 1\n",
+    "\n",
+    "        # === internals of mod2 ===\n",
+    "\n",
+    "        for l in range(0, self.mod2.num_internal_species):\n",
+    "\n",
+    "            if self.mod2.species_names[l] in list_of_species:\n",
+    "                l += 1\n",
+    "            else:\n",
+    "                list_of_species.append(self.mod2.species_names[l])\n",
+    "\n",
+    "                internal_species_added += 1\n",
+    "      \n",
+    "\n",
+    "        # === external species of mod1 and mod2 ===\n",
+    "        \n",
+    "        for l in range(self.mod1.num_internal_species, len(self.mod1.species_names)):\n",
+    "\n",
+    "            if self.mod1.species_names[l] in list_of_species:\n",
+    "                l += 1\n",
+    "            else:\n",
+    "                list_of_species.append(self.mod1.species_names[l])\n",
+    "        \n",
+    "       \n",
+    "\n",
+    "        for l in range(self.mod2.num_internal_species, len(self.mod2.species_names)):\n",
+    "\n",
+    "            if self.mod2.species_names[l] in list_of_species:\n",
+    "                l += 1\n",
+    "            else:\n",
+    "                list_of_species.append(self.mod2.species_names[l])\n",
+    "        \n",
+    "\n",
+    "        self.final_list = list_of_species\n",
+    "        \n",
+    "        self.final_dict = {i: v for i, v in enumerate(self.final_list)}\n",
+    "\n",
+    "        return self.final_list, self.final_dict, internal_species_added\n",
+    "\n",
+    "    "
    ]
   },
   {
