--- a/students/Will/code_unification.ipynb
+++ b/students/Will/code_unification.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 70,
    "id": "457f1bac",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 71,
    "id": "42f6ef42",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "c136b1ff",
    "metadata": {},
    "outputs": [],
@@ -322,13 +322,13 @@
     "      - kinetic_form_resistance_matrix\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, SM: Matrix, num_internal_species: int, hypergraph_labels: dict, species_names: list):\n",
+    "    def __init__(self, SM: Matrix, num_internal_species: int, species_names: list):\n",
     "        # store basic matrices and labels\n",
     "        self.matrix = SM\n",
     "        self.num_internal_species = num_internal_species\n",
     "        self.internal_SM = SM[0:num_internal_species, :]\n",
     "        self.external_SM = SM[num_internal_species: len(SM), :]\n",
-    "        self.hypergraph_labels = hypergraph_labels\n",
+    "        self.hypergraph_labels = {i: item for i, item in enumerate(species_names)}\n",
     "        self.species_names = species_names\n",
     "\n",
     "        # build labels and symbolic vectors (chemical potentials, edge currents)\n",
@@ -347,6 +347,7 @@
     "    # -------------------------\n",
     "    # Label helpers\n",
     "    # -------------------------\n",
+    "    \n",
     "    def _label_species_and_potentials(self, species_names: list):\n",
     "        \"\"\"Create symbolic chemical potentials vector from species_names.\"\"\"\n",
     "        self.chemical_potentials = []\n",
@@ -864,14 +865,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "52af67f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "stoich_matrix_1 = Matrix( [[-1,1,0], [1,-1,-1], [0,0,1], [-1,0,-1], [0,1,0]])\n",
     "num_internal_species_1 = 3\n",
-    "labels_1 = {0: 'Ea', 1: 'EaS', 2: 'EaS2', 3: 'S', 4: 'Na'}\n",
     "species_names_1 = [\"Ea\", \"EaS\", \"EaS2\", \"S\", \"Na\"]\n",
     "\n",
     "stoich_matrix_2 = Matrix([[-1, 0, 1, 0, 0], # first row of internal\n",
@@ -884,20 +884,19 @@
     "                             [0, 0, 1, 0, 0]])\n",
     "\n",
     "num_internal_species_2 = 4\n",
-    "labels_2 = {0: 'Eb', 1: 'EbF', 2: 'EbW', 3: 'Eb*', 4: 'Na', 5: 'Nb', 6: 'F', 7: 'W'}\n",
     "species_names_2 = [\"Eb\", \"EbF\", \"EbW\", \"Eb*\", \"Na\", \"Nb\", \"F\", \"W\"]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 74,
    "id": "a655b992",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mod1 = ModuleProperties(stoich_matrix_1, num_internal_species_1, labels_1,species_names_1 )\n",
-    "mod2 = ModuleProperties(stoich_matrix_2, num_internal_species_2, labels_2,species_names_2 )\n"
+    "mod1 = ModuleProperties(stoich_matrix_1, num_internal_species_1, species_names_1 )\n",
+    "mod2 = ModuleProperties(stoich_matrix_2, num_internal_species_2, species_names_2 )\n"
    ]
   },
   {
@@ -910,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "id": "1e97492c",
    "metadata": {},
    "outputs": [
@@ -925,7 +924,7 @@
        "⎣         -r₅            r₄ + r₅ + r₆⎦"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 77,
    "id": "74b0dc97",
    "metadata": {},
    "outputs": [
@@ -961,7 +960,7 @@
        "⎣    -r₅       r₁ + r₂ + r₅ + r₇ + r₈⎦"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,14 +973,14 @@
     "species_names_3, labels_3, num_internal_species_3 = new_matrix_constructor.construct_new_species_list()\n",
     "\n",
     "mod3_direct_construction = ModuleProperties(stoich_matrix_3, num_internal_species_3, \n",
-    "                                            labels_3, species_names_3)\n",
+    "                                            species_names_3)\n",
     "\n",
     "mod3_direct_construction.calculate_cycle_resistance_matrix()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "59d89789",
    "metadata": {},
    "outputs": [
