--- a/students/Will/code_unification.ipynb
+++ b/students/Will/code_unification.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 137,
    "id": "457f1bac",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 138,
    "id": "42f6ef42",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 159,
    "id": "c136b1ff",
    "metadata": {},
    "outputs": [],
@@ -576,7 +576,7 @@
     "        # orchestrates the sequence of computations using broken down methods\n",
     "        self._find_matching_species()\n",
     "\n",
-    "        self.determine_left_and_right()\n",
+    "        #self.determine_left_and_right()\n",
     "        \n",
     "        self._compute_initial_partitioned_currents()\n",
     "        self._solve_constraints_and_substitute()\n",
@@ -779,10 +779,16 @@
     "        self.identity_part_1 = sympy.eye(len(self.mod1_left_current), self.pi_cols)\n",
     "        self.pi_1_3 = self.identity_part_1.col_join(self.pi)\n",
     "\n",
+    "        if self.pi_1_3.is_zero == True:\n",
+    "            print(\"pi_1_3 matrix is zero.\")\n",
+    "\n",
     "        self.identity_part_2 = sympy.eye(len(self.mod2_right_current), self.pi_cols - self.pi_rows)\n",
     "        self.zeros_part_2 = sympy.zeros(len(self.mod2_right_current), self.pi_rows)\n",
     "        self.bottom_part_2 = self.zeros_part_2.row_join(self.identity_part_2)\n",
     "        self.pi_2_3 = (-self.pi).col_join(self.bottom_part_2)\n",
+    "\n",
+    "        if self.pi_1_3.is_zero == True:\n",
+    "            print(\"pi_1_3 matrix is zero.\")\n",
     "\n",
     "        self.PI_1_3 = sympy.Matrix(self.mod1_selection_matrix.pinv() * self.pi_1_3 * self.mod3_selection_matrix)\n",
     "        self.PI_2_3 = sympy.Matrix(self.mod2_selection_matrix.pinv() * self.pi_2_3 * self.mod3_selection_matrix)\n",
@@ -865,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "id": "52af67f7",
    "metadata": {},
    "outputs": [],
@@ -890,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 141,
    "id": "a655b992",
    "metadata": {},
    "outputs": [],
@@ -909,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 142,
    "id": "1e97492c",
    "metadata": {},
    "outputs": [
@@ -924,7 +930,7 @@
        "⎣         -r₅            r₄ + r₅ + r₆⎦"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 143,
    "id": "74b0dc97",
    "metadata": {},
    "outputs": [
@@ -960,7 +966,7 @@
        "⎣    -r₅       r₁ + r₂ + r₅ + r₇ + r₈⎦"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "id": "59d89789",
    "metadata": {},
    "outputs": [
@@ -1015,7 +1021,7 @@
        "⎣0   0   0   0   0   1   0   0 ⎦"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,14 +1029,6 @@
    "source": [
     "stoich_matrix_3"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36242a7a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
