working serial combination with generic chain

--- a/students/Will/compiling_algorithm.ipynb
+++ b/students/Will/compiling_algorithm.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 249,
    "id": "3e6575a0",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "b827dc95",
    "metadata": {},
    "outputs": [],
@@ -422,36 +422,32 @@
     "\n",
     "        fundamental_CM = selection_matrix_MPI * self.calculate_physical_conductance_matrix() * selection_matrix_MPI.T\n",
     "\n",
-    "        if fundamental_CM.shape == (1,1): # if matrix is a single element - do not want to simplify it\n",
+    "        return fundamental_CM\n",
     "\n",
-    "            return fundamental_CM\n",
-    "        \n",
-    "        else: # if matrix is not a single element: output the simplified CM (multiplied by det(R) and the factor 1/det(R))\n",
     "\n",
-    "            return fundamental_CM * self.calculate_cycle_resistance_matrix().det(), 1/self.calculate_cycle_resistance_matrix().det()\n",
-    "        \n",
+    "\n",
+    "    \n",
+    "\n",
     "        \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 251,
    "id": "08f178ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\frac{1}{r_{1} + r_{2}}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}r_{1} + r_{2}\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡   1   ⎤\n",
-       "⎢───────⎥\n",
-       "⎣r₁ + r₂⎦"
+       "[r₁ + r₂]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,15 +464,12 @@
     "\n",
     "mod1.calculate_fundamental_conductance_matrix()\n",
     "\n",
-    "mod1.calculate_cycle_resistance_matrix()\n",
-    "\n",
-    "\n",
-    "mod1.calculate_fundamental_conductance_matrix()"
+    "mod1.calculate_cycle_resistance_matrix()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 252,
    "id": "8d84da64",
    "metadata": {},
    "outputs": [
@@ -491,7 +484,7 @@
        "⎣    -r₂       r₂ + r₄ + r₅⎦"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,71 +512,68 @@
     "C_paper\n",
     "\n",
     "mod2.calculate_cycle_resistance_matrix()\n",
-    "\n"
+    "mod2.calculate_fundamental_conductance_matrix() * mod2.calculate_cycle_resistance_matrix().det()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6ac51dba",
+   "execution_count": 253,
+   "id": "2b2c7d22",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}r_{2} + r_{4} + r_{5} & - r_{2}\\\\- r_{2} & r_{1} + r_{2} + r_{3}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}r_{1} + r_{2} + r_{3} & - r_{1} - r_{2} - r_{3} & r_{2} & - r_{2}\\\\- r_{1} - r_{2} - r_{3} & r_{1} + r_{2} + r_{3} & - r_{2} & r_{2}\\\\r_{2} & - r_{2} & r_{2} + r_{4} + r_{5} & - r_{2} - r_{4} - r_{5}\\\\- r_{2} & r_{2} & - r_{2} - r_{4} - r_{5} & r_{2} + r_{4} + r_{5}\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡r₂ + r₄ + r₅      -r₂     ⎤\n",
+       "⎡r₁ + r₂ + r₃   -r₁ - r₂ - r₃       r₂             -r₂     ⎤\n",
+       "⎢                                                          ⎥\n",
+       "⎢-r₁ - r₂ - r₃  r₁ + r₂ + r₃        -r₂            r₂      ⎥\n",
+       "⎢                                                          ⎥\n",
+       "⎢     r₂             -r₂       r₂ + r₄ + r₅   -r₂ - r₄ - r₅⎥\n",
+       "⎢                                                          ⎥\n",
+       "⎣     -r₂            r₂        -r₂ - r₄ - r₅  r₂ + r₄ + r₅ ⎦"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mod2.calculate_physical_conductance_matrix() * mod2.calculate_cycle_resistance_matrix().det()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "id": "c9bf9969",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}r_{2} + r_{4} + r_{5} & r_{2}\\\\r_{2} & r_{1} + r_{2} + r_{3}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "⎡r₂ + r₄ + r₅       r₂     ⎤\n",
        "⎢                          ⎥\n",
-       "⎣    -r₂       r₁ + r₂ + r₃⎦"
+       "⎣     r₂       r₁ + r₂ + r₃⎦"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Test to see why R has swapped diagonals:\n",
-    "\n",
-    "C_paper.T*mod2.calculate_reaction_resistance_matrix()*C_paper"
+    "mod2.calculate_cycle_resistance_matrix().inv() * mod2.calculate_cycle_resistance_matrix().det()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "2b99aa36",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left( \\left[\\begin{matrix}r_{1} + r_{2} + r_{3} & - r_{2}\\\\- r_{2} & r_{2} + r_{4} + r_{5}\\end{matrix}\\right], \\  \\frac{1}{r_{1} r_{2} + r_{1} r_{4} + r_{1} r_{5} + r_{2} r_{3} + r_{2} r_{4} + r_{2} r_{5} + r_{3} r_{4} + r_{3} r_{5}}\\right)$"
-      ],
-      "text/plain": [
-       "⎛⎡r₁ + r₂ + r₃      -r₂     ⎤                                1                 ↪\n",
-       "⎜⎢                          ⎥, ─────────────────────────────────────────────── ↪\n",
-       "⎝⎣    -r₂       r₂ + r₄ + r₅⎦  r₁⋅r₂ + r₁⋅r₄ + r₁⋅r₅ + r₂⋅r₃ + r₂⋅r₄ + r₂⋅r₅ + ↪\n",
-       "\n",
-       "↪               ⎞\n",
-       "↪ ──────────────⎟\n",
-       "↪  r₃⋅r₄ + r₃⋅r₅⎠"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mod2 = ModuleProperties(stoich_matrix_2, 4,species_names2)\n",
-    "mod2.calculate_fundamental_conductance_matrix()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 255,
    "id": "41128210",
    "metadata": {},
    "outputs": [
@@ -594,7 +584,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 22\u001b[0m\n\u001b[1;32m     18\u001b[0m     chem_pot \u001b[38;5;241m=\u001b[39m symbols(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mmu_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mspecies_symbol\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     19\u001b[0m     chemical_potentials\u001b[38;5;241m.\u001b[39mappend(chem_pot)\n\u001b[0;32m---> 22\u001b[0m edge_currents_vector \u001b[38;5;241m=\u001b[39m Matrix([edge_currents_j]) \u001b[38;5;66;03m# make a vector out of the js\u001b[39;00m\n\u001b[1;32m     23\u001b[0m chemical_potentials_vector \u001b[38;5;241m=\u001b[39m Matrix([chemical_potentials]) \u001b[38;5;66;03m# make a vector out of the labelled chemical potentials\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# LABELS FOR ALL RESISTANCES AND REACTIONS\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[255], line 22\u001b[0m\n\u001b[1;32m     18\u001b[0m     chem_pot \u001b[38;5;241m=\u001b[39m symbols(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mmu_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mspecies_symbol\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     19\u001b[0m     chemical_potentials\u001b[38;5;241m.\u001b[39mappend(chem_pot)\n\u001b[0;32m---> 22\u001b[0m edge_currents_vector \u001b[38;5;241m=\u001b[39m Matrix([edge_currents_j]) \u001b[38;5;66;03m# make a vector out of the js\u001b[39;00m\n\u001b[1;32m     23\u001b[0m chemical_potentials_vector \u001b[38;5;241m=\u001b[39m Matrix([chemical_potentials]) \u001b[38;5;66;03m# make a vector out of the labelled chemical potentials\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# LABELS FOR ALL RESISTANCES AND REACTIONS\u001b[39;00m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'edge_currents_j' is not defined"
      ]
     }
@@ -832,7 +822,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -846,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
