--- a/students/Jed/Combining class.ipynb
+++ b/students/Jed/Combining class.ipynb
@@ -2,109 +2,105 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "507023e5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}1 & 0\\\\0 & 1\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{r_{11} + r_{12} + r_{13}}{r_{11} r_{12} + r_{11} r_{14} + r_{11} r_{15} + r_{12} r_{13} + r_{12} r_{15} + r_{13} r_{14} + r_{13} r_{15}} & \\frac{r_{12}}{r_{12} r_{13} + r_{12} r_{14} + r_{12} r_{15} + r_{13} r_{14} + r_{13} r_{15}}\\\\\\frac{r_{11} r_{12} + r_{11} r_{14} + r_{11} r_{15} + r_{12} r_{13} + r_{12} r_{15} + r_{13} r_{14} + r_{13} r_{15}}{r_{12}} & 1\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "Matrix([\n",
-       "[1, 0],\n",
-       "[0, 1]])"
+       "[(r11 + r12 + r13)/(r11*r12 + r11*r14 + r11*r15 + r12*r13 + r12*r15 + r13*r14 + r13*r15), r12/(r12*r13 + r12*r14 + r12*r15 + r13*r14 + r13*r15)],\n",
+       "[              (r11*r12 + r11*r14 + r11*r15 + r12*r13 + r12*r15 + r13*r14 + r13*r15)/r12,                                                     1]])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import sympy\n",
+    "import sympy as sp\n",
     "\n",
-    "class ModuleCombination:\n",
-    "    \n",
-    "    def __init__(self, i_1_l, i_1_r, i_1, i_2_l, i_2_r, i_2, i_3, l_1, l_2, S_1, S_2, S_3):\n",
-    "        self.i_1_l = i_1_l\n",
-    "        self.i_1_r = i_1_r\n",
-    "        self.i_1 = i_1\n",
-    "        self.i_2_l = i_2_l\n",
-    "        self.i_2_r = i_2_r\n",
-    "        self.i_2 = i_2\n",
-    "        self.i_3 = i_3\n",
-    "        self.l_1 = l_1 \n",
-    "        self.l_2 = l_2\n",
-    "        self.S_1 = S_1\n",
-    "        self.S_2 = S_2  \n",
-    "        self.S_3 = S_3\n",
+    "SUB_TO_DIGIT = {'₀':'0','₁':'1','₂':'2','₃':'3','₄':'4','₅':'5','₆':'6','₇':'7','₈':'8','₉':'9'}\n",
+    "DIGIT_TO_SUB = {v:k for k,v in SUB_TO_DIGIT.items()}\n",
     "\n",
+    "def parse_symbol_name(name):\n",
+    "    # underscore: r_12\n",
+    "    if '_' in name:\n",
+    "        prefix, idx = name.split('_', 1)\n",
+    "        if idx.isdigit():\n",
+    "            return prefix, idx, 'underscore'\n",
+    "    # ascii digits: r12\n",
+    "    i = len(name)-1\n",
+    "    while i >= 0 and name[i].isdigit():\n",
+    "        i -= 1\n",
+    "    if i < len(name)-1:\n",
+    "        return name[:i+1], name[i+1:], 'ascii'\n",
+    "    # unicode subscripts: r₁₂\n",
+    "    i = len(name)-1\n",
+    "    while i >= 0 and name[i] in SUB_TO_DIGIT:\n",
+    "        i -= 1\n",
+    "    if i < len(name)-1:\n",
+    "        prefix = name[:i+1]\n",
+    "        idx = ''.join(SUB_TO_DIGIT[ch] for ch in name[i+1:])\n",
+    "        return prefix, idx, 'unicode'\n",
+    "    return None, None, None\n",
     "\n",
-    "    def ConservationLaws(self):\n",
-    "        self.length_i_1_l = len(self.i_1_l)\n",
-    "        self.length_i_1_r = len(self.i_1_r)\n",
-    "        self.l_1_l = self.l_1[:, :self.length_i_1_l]\n",
-    "        self.l_1_r = self.l_1[:, self.length_i_1_l:]\n",
-    "        \n",
-    "        self.length_i_2_l = len(self.i_2_l)\n",
-    "        self.length_i_2_r = len(self.i_2_r)\n",
-    "        self.l_2_l = self.l_2[:, :self.length_i_2_l]\n",
-    "        self.l_2_r = self.l_2[:, self.length_i_2_l:]\n",
-    "        \n",
-    "        self.L_i = sympy.Matrix.vstack(-self.l_1_r, self.l_2_l)\n",
-    "        \n",
-    "        L_e = sympy.BlockMatrix([\n",
-    "        [self.l_1_l, sympy.ZeroMatrix(self.l_1_l.shape[0], self.l_2_r.shape[1])],\n",
-    "        [sympy.ZeroMatrix(self.l_2_r.shape[0], self.l_1_l.shape[1]), self.l_2_r]])\n",
-    "        self.L_e = sympy.Matrix(L_e)\n",
-    "        \n",
-    "        self.pi = sympy.Matrix(self.L_i.pinv() * self.L_e)\n",
+    "def build_name(prefix, new_index, style):\n",
+    "    if style == 'underscore':\n",
+    "        return f\"{prefix}_{new_index}\"\n",
+    "    if style == 'unicode':\n",
+    "        return f\"{prefix}{''.join(DIGIT_TO_SUB[d] for d in str(new_index))}\"\n",
+    "    return f\"{prefix}{new_index}\"\n",
     "\n",
-    "        self.pi_rows, self.pi_cols = self.pi.shape\n",
+    "def shift_expr_variables(expr, shift):\n",
+    "    # Collect symbols robustly\n",
+    "    symbols = expr.atoms(sp.Symbol)\n",
+    "    if not symbols:\n",
+    "        return expr\n",
+    "    subs = {}\n",
+    "    for s in symbols:\n",
+    "        prefix, idx_str, style = parse_symbol_name(s.name)\n",
+    "        if prefix is None:\n",
+    "            continue\n",
+    "        new_idx = int(idx_str) + int(shift)\n",
+    "        new_name = build_name(prefix, new_idx, style)\n",
+    "        # Preserve assumptions\n",
+    "        subs[s] = sp.Symbol(new_name, **s.assumptions0)\n",
+    "    return expr.xreplace(subs)  # faster, exact structure\n",
     "\n",
-    "        self.identity_part_1 = sympy.eye(self.length_i_1_l, self.pi_cols)\n",
-    "        self.pi_1_3 = self.identity_part_1.col_join(self.pi)\n",
-    "\n",
-    "        self.identity_part_2 = sympy.eye(self.length_i_2_r, self.pi_cols-self.pi_rows)\n",
-    "        self.zeros_part_2 = sympy.zeros(self.length_i_2_r, self.pi_rows)\n",
-    "        self.bottom_part_2 = self.zeros_part_2.row_join(self.identity_part_2)\n",
-    "        self.pi_2_3 = (-self.pi).col_join(self.bottom_part_2)\n",
-    "\n",
-    "        self.PI_1_3 = sympy.Matrix(self.S_1.pinv() * self.pi_1_3 * self.S_3)\n",
-    "        self.PI_2_3 = sympy.Matrix(self.S_2.pinv() * self.pi_2_3 * self.S_3)\n",
-    "\n",
-    "        \n",
-    "\n",
+    "def shift_matrix_variables(matrix, shift):\n",
+    "    return matrix.applyfunc(lambda e: shift_expr_variables(e, shift))\n",
     "\n",
     "\n",
-    "j_1, j_6, j_8 = sympy.symbols('j_1 j_6 j_8')\n",
-    "i_1_l = sympy.Matrix([j_1])\n",
-    "i_1_r = sympy.Matrix([-j_1])\n",
-    "i_1 = sympy.Matrix([j_1,-j_1])\n",
-    "i_2_l = sympy.Matrix([j_1])\n",
-    "i_2_r = sympy.Matrix([-j_8,j_6,-j_6])\n",
-    "i_2 = sympy.Matrix([j_1,-j_1,j_6,-j_6])\n",
-    "i_3 = sympy.Matrix([j_1,-j_1,j_6,-j_6])\n",
-    "l_1 = sympy.Matrix([[1,1]])\n",
-    "l_2 = sympy.Matrix([[1,1,0,0],[0,0,1,1]])\n",
-    "S_1 = sympy.Matrix([1,-1])\n",
-    "S_2 = sympy.Matrix([[1,0],[-1,0],[0,1],[0,-1]])\n",
-    "S_3 = sympy.Matrix([[1,0],[-1,0],[0,1],[0,-1]])\n",
-    "\n",
-    "\n",
-    "\n",
-    "example1 = ModuleCombination(i_1_l, i_1_r, i_1, i_2_l, i_2_r, i_2, i_3, l_1, l_2, S_1, S_2, S_3)\n",
-    "example1.ConservationLaws()\n",
-    "example1.PI_2_3\n",
-    "\n"
+    "r1, r2, r3, r4, r5 = sp.symbols('r1 r2 r3 r4 r5')\n",
+    "M = sp.Matrix([\n",
+    "    [(r1+r2+r3)/(r1*r2 + r1*r4 + r1*r5 + r2*r3 + r2*r5 + r3*r4 + r3*r5),\n",
+    "     r2/(r2*r4 + r2*r5 + r2*r3 + r3*r4 + r3*r5)],\n",
+    "    [(r1*r2 + r1*r4 + r1*r5 + r2*r3 + r2*r5 + r3*r4 + r3*r5)/r2,\n",
+    "     (r1*r2 + r1*r4 + r1*r5 + r2*r3 + r2*r5 + r3*r4 + r3*r5)/\n",
+    "     (r1*r2 + r1*r4 + r1*r5 + r2*r3 + r2*r5 + r3*r4 + r3*r5)]\n",
+    "])\n",
+    "M_shifted = shift_matrix_variables(M, 10)\n",
+    "M_shifted\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aabaf3a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -118,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
