--- a/students/Will/combined_module_SM.ipynb
+++ b/students/Will/combined_module_SM.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "ec7248d5",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "e909e067",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "11355fc1",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "3ecc6ceb",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
        "[ 0,  0,  1]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "f44e3642",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
        "[ 0,  0,  0,  1, -1]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,11 +149,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "35cfe884",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "class CombinedSM:\n",
     "     \n",
     "    def __init__(self, mod1, mod2):\n",
@@ -307,89 +308,14 @@
     "\n",
     "\n",
     "        return new_SM\n",
-    "    \n",
-    "    def construct_new_species_list(self):\n",
-    "\n",
-    "        \"\"\" This function returns a species list and dictionary with species names in the same order as they appear in \n",
-    "        the new SM \"\"\"\n",
-    "\n",
-    "        list_of_species = []\n",
-    "        internal_species_added = 0\n",
-    "\n",
-    "        # === internal species of mod1 ===\n",
-    "        \n",
-    "        for l in range(0, self.mod1.num_internal_species):\n",
-    "            \n",
-    "            if self.mod1.species_names[l] in list_of_species:\n",
-    "                l += 1\n",
-    "            else:\n",
-    "                list_of_species.append(self.mod1.species_names[l])\n",
-    "\n",
-    "                internal_species_added += 1\n",
     "\n",
     "\n",
-    "        # === find overlapping species names ===\n",
     "\n",
-    "        for key in self.keys_1: # pick either keys1 or keys2, both correspond to same species \n",
-    "            \n",
-    "            if self.mod1.species_names[key + + self.mod1.num_internal_species] in list_of_species:\n",
-    "                l += 1\n",
-    "            else:\n",
-    "                list_of_species.append(self.mod1.species_names[key + self.mod1.num_internal_species])\n",
-    "\n",
-    "                internal_species_added += 1\n",
-    "\n",
-    "        # === internals of mod2 ===\n",
-    "\n",
-    "        for l in range(0, self.mod2.num_internal_species):\n",
-    "\n",
-    "            if self.mod2.species_names[l] in list_of_species:\n",
-    "                l += 1\n",
-    "            else:\n",
-    "                list_of_species.append(self.mod2.species_names[l])\n",
-    "\n",
-    "                internal_species_added += 1\n",
-    "      \n",
-    "\n",
-    "        # === external species of mod1 and mod2 ===\n",
-    "        \n",
-    "        for l in range(self.mod1.num_internal_species, len(self.mod1.species_names)):\n",
-    "\n",
-    "            if self.mod1.species_names[l] in list_of_species:\n",
-    "                l += 1\n",
-    "            else:\n",
-    "                list_of_species.append(self.mod1.species_names[l])\n",
-    "        \n",
-    "       \n",
-    "\n",
-    "        for l in range(self.mod2.num_internal_species, len(self.mod2.species_names)):\n",
-    "\n",
-    "            if self.mod2.species_names[l] in list_of_species:\n",
-    "                l += 1\n",
-    "            else:\n",
-    "                list_of_species.append(self.mod2.species_names[l])\n",
-    "        \n",
-    "\n",
-    "        self.final_list = list_of_species\n",
-    "        \n",
-    "        self.final_dict = {i: v for i, v in enumerate(self.final_list)}\n",
-    "\n",
-    "        return self.final_list, self.final_dict, internal_species_added\n",
-    "\n",
-    "        \n",
     "\n",
     "\n",
     "\n",
     "        \n",
-    "\n",
-    "        \n",
-    "\n",
-    "\n",
-    "\n",
-    "        \n",
-    "        \n",
-    "\n",
-    "\n"
+    "        "
    ]
   },
   {
@@ -402,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "ea1c6e49",
    "metadata": {},
    "outputs": [],
@@ -428,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "c6b0b32b",
    "metadata": {},
    "outputs": [
@@ -453,7 +379,7 @@
        "[ 0,  0,  0,  0,  0,  1,  0,  0]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "26baf4bc",
    "metadata": {},
    "outputs": [],
@@ -498,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "1cfbd734",
    "metadata": {},
    "outputs": [],
@@ -510,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "c937fe49",
    "metadata": {},
    "outputs": [
@@ -534,7 +460,7 @@
        "[ 0,  0,  0,  0,  1,  0]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,46 +474,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "85a2b527",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}-1 & 1 & 0 & 0 & 0 & 0 & 0 & 0\\\\1 & -1 & -1 & 0 & 0 & 0 & 0 & 0\\\\0 & 0 & 1 & 0 & 0 & 0 & 0 & 0\\\\0 & 1 & 0 & 0 & 0 & 0 & -1 & 0\\\\0 & 0 & 0 & -1 & 0 & 1 & 0 & 0\\\\0 & 0 & 0 & 1 & -1 & 0 & -1 & 0\\\\0 & 0 & 0 & 0 & 1 & -1 & 0 & 1\\\\0 & 0 & 0 & 0 & 0 & 0 & 1 & -1\\\\-1 & 0 & -1 & 0 & 0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0 & 0 & 0 & 0 & 1\\\\0 & 0 & 0 & -1 & 0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0 & 0 & 1 & 0 & 0\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[-1,  1,  0,  0,  0,  0,  0,  0],\n",
-       "[ 1, -1, -1,  0,  0,  0,  0,  0],\n",
-       "[ 0,  0,  1,  0,  0,  0,  0,  0],\n",
-       "[ 0,  1,  0,  0,  0,  0, -1,  0],\n",
-       "[ 0,  0,  0, -1,  0,  1,  0,  0],\n",
-       "[ 0,  0,  0,  1, -1,  0, -1,  0],\n",
-       "[ 0,  0,  0,  0,  1, -1,  0,  1],\n",
-       "[ 0,  0,  0,  0,  0,  0,  1, -1],\n",
-       "[-1,  0, -1,  0,  0,  0,  0,  0],\n",
-       "[ 0,  0,  0,  0,  0,  0,  0,  1],\n",
-       "[ 0,  0,  0, -1,  0,  0,  0,  0],\n",
-       "[ 0,  0,  0,  0,  0,  1,  0,  0]])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    " p = CombinedSM(mod1, mod2)\n",
-    "\n",
-    "p.construct_new_SM()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "238792d8",
+   "id": "85a2b527",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -595,7 +483,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conductance",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -609,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
