--- a/students/Will/Gillespie_simulations/single_reaction.ipynb
+++ b/students/Will/Gillespie_simulations/single_reaction.ipynb
@@ -95,7 +95,31 @@
    "id": "5ba34f5e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "current = []\n",
+    "force = []\n",
+    "\n",
+    "# let the force for this reaction be defined as:\n",
+    "\n",
+    "conc_A = NA\n",
+    "\n",
+    "f1 = mu_A + mu_B - mu_C # these are the chemical potentials of the invloved species, +/- is determined by the flow of mass, consumed species get +\n",
+    "\n",
+    "f = R*T*np.log()\n",
+    "\n",
+    "\n",
+    "# define the concentrations for each species for this iteration\n",
+    "V = 1 # set volume = 1 for now (volume of system)\n",
+    "\n",
+    "conc_A = NA / V\n",
+    "conc_B = NB / V\n",
+    "\n",
+    "\n",
+    "# currents at each time step:\n",
+    "\n",
+    "j = k_f * \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
