--- a/students/Jed/Modularisation_attempt_in_2026.ipynb
+++ b/students/Jed/Modularisation_attempt_in_2026.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 582,
+   "execution_count": null,
    "id": "6947d74b",
    "metadata": {},
    "outputs": [],
@@ -24,13 +24,13 @@
     "\n",
     "class ModuleProperties:\n",
     "\n",
-    "    def __init__(self, stoich_matrix, num_internal_species, species_labels, species_names):\n",
+    "    def __init__(self, stoich_matrix, num_internal_species, species_names):\n",
     "        self.stoich_matrix = sympy.Matrix(stoich_matrix)\n",
     "        self.num_internal_species = num_internal_species\n",
     "        self.num_external_species = self.stoich_matrix.shape[0] - num_internal_species\n",
     "        self.num_species = self.stoich_matrix.shape[0]\n",
     "        self.num_reactions = self.stoich_matrix.shape[1]\n",
-    "        self.species_labels = species_labels\n",
+    "        self.species_labels = {i: item for i, item in enumerate(species_names)}\n",
     "        self.species_names = species_names\n",
     "        self.internal_stoich_matrix = self.stoich_matrix[0:self.num_internal_species, :]\n",
     "        self.external_stoich_matrix = self.stoich_matrix[self.num_internal_species: len(self.stoich_matrix), :]\n",
