--- a/students/Jed/Modularisation_attempt_in_2026.ipynb
+++ b/students/Jed/Modularisation_attempt_in_2026.ipynb
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": null,
    "id": "3065066c",
    "metadata": {},
    "outputs": [
@@ -1210,6 +1210,44 @@
    "source": [
     "alpha_plus_beta_plus_gamma_properties.calculate_physical_currents()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b4532546",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0010271072387695312\n",
+      "CPU times: total: 0 ns\n",
+      "Wall time: 1.03 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time  \n",
+    "\n",
+    "import time\n",
+    "\n",
+    "start = time.time()\n",
+    "a = 0\n",
+    "for i in range(10000):\n",
+    "    a+=i\n",
+    "end = time.time()\n",
+    "\n",
+    "print(end-start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8647369",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
