added comments to sim code

--- a/students/Will/Gillespie_simulations/numba_infused.ipynb
+++ b/students/Will/Gillespie_simulations/numba_infused.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "ed2e1b1e",
    "metadata": {},
    "outputs": [],
@@ -29,17 +29,18 @@
     "    num_internal_species,\n",
     "    stoich_cols\n",
     "):\n",
-    "    t = 0.0\n",
-    "    T = final_time\n",
+    "    t = 0.0 # initial time\n",
+    "    T = final_time # length of simulation\n",
     "\n",
-    "    n_species = len(current_pops)\n",
-    "    n_reactions = SM.shape[1]\n",
+    "    n_species = len(current_pops) # number of species in system\n",
+    "    n_reactions = SM.shape[1] # number of reactions, from the SM\n",
     "\n",
     "    # ---- Preallocate storage ----\n",
-    "    max_steps = 1_000_000\n",
+    "    max_steps = 1_000_000 # this was introduced by AI after i asked for speed-up help\n",
+    "\n",
+    "    # Create empty arrays of the correct size for each data set, instead of appending to lists (much faster this way)\n",
     "    time_history = np.zeros(max_steps)\n",
     "    pop_history = np.zeros((max_steps, n_species))\n",
-    "\n",
     "    reaction_chosen_tracker = np.zeros(n_reactions)\n",
     "    force_sums = np.zeros(stoich_cols)\n",
     "\n",
@@ -48,23 +49,30 @@
     "    time_history[0] = t\n",
     "    pop_history[0, :] = current_pops\n",
     "\n",
+    "\n",
     "    while t < T:\n",
     "\n",
-    "        # ---- Propensity calculation ----\n",
+    "        # ---- Propensity calculation ----         # move this inside instead of outsourcing to another class method\n",
     "        propensity_vector = np.zeros(n_reactions)\n",
     "\n",
-    "        for a in range(n_reactions):\n",
-    "            product_of_counts = 1.0\n",
-    "            for idx in current_pops_index[a]:\n",
+    "        for a in range(n_reactions): # for each reaction\n",
+    "\n",
+    "            product_of_counts = 1.0 # initialise product\n",
+    "\n",
+    "            for idx in current_pops_index[a]: # for every species in this reaction, multiply their counts together. Done via indexes found earlier\n",
+    "\n",
     "                product_of_counts *= current_pops[idx]\n",
-    "            propensity_vector[a] = product_of_counts * rates_list[a]\n",
+    "\n",
+    "            propensity_vector[a] = product_of_counts * rates_list[a] # propensity calculation (kept local)\n",
+    "\n",
+    "        # --------------------------------\n",
     "\n",
     "        a0 = np.sum(propensity_vector)\n",
     "\n",
-    "        if a0 == 0.0:\n",
+    "        if a0 == 0.0: # prevent unphysical situation (also breaks code due to /0 error)\n",
     "            break\n",
     "\n",
-    "        r1 = np.random.rand()\n",
+    "        r1 = np.random.rand() # find random numbers\n",
     "        r2 = np.random.rand()\n",
     "\n",
     "        tau = -math.log(r1) / a0\n",
@@ -73,42 +81,50 @@
     "        cumulative = 0.0\n",
     "        reaction_chosen = 0\n",
     "\n",
+    "        # ---- Reaction selection ------\n",
+    "        # weighted towards reactions with larger propensities\n",
+    "\n",
     "        for n in range(n_reactions):\n",
+    "\n",
     "            cumulative += propensity_vector[n]\n",
+    "\n",
     "            if target_value <= cumulative:\n",
+    "\n",
     "                reaction_chosen = n\n",
+    "\n",
     "                break\n",
     "\n",
     "        # ---- Sampling for currents & forces ----\n",
-    "        if t > 40:\n",
+    "        if t > 40: # hard coded burn-in time to ensure we are sampling the stationary state only (need to generalise this)\n",
     "\n",
     "            reaction_chosen_tracker[reaction_chosen] += 1\n",
     "\n",
     "            l = 0\n",
     "            while l < stoich_cols:\n",
     "\n",
-    "                if propensity_vector[l] > 0.0 and propensity_vector[l+1] > 0.0:\n",
+    "                if propensity_vector[l] > 0.0 and propensity_vector[l+1] > 0.0: # preventing /0 error, returns NaN otherwise\n",
+    "\n",
     "                    force_sums[l] += tau * math.log(\n",
     "                        propensity_vector[l] / propensity_vector[l+1]\n",
     "                    )\n",
     "\n",
     "                l += 1\n",
     "\n",
-    "        # ---- Update ----\n",
+    "        # ---- Updates ----\n",
     "        t += tau\n",
     "\n",
     "        for m in range(num_internal_species):\n",
-    "            current_pops[m] += SM[m, reaction_chosen]\n",
+    "            current_pops[m] += SM[m, reaction_chosen] # update populations using the stoichometric coefficients of the chosen reaction\n",
     "\n",
-    "        # ---- Store trajectory ----\n",
+    "        # ---- Store trajectory ---- # AI coded, for tracking time for plotting later (replaces an append method to a list of times)\n",
     "        step_counter += 1\n",
     "        if step_counter >= max_steps:\n",
     "            break\n",
     "\n",
     "        time_history[step_counter] = t\n",
-    "        pop_history[step_counter, :] = current_pops\n",
+    "        pop_history[step_counter, :] = current_pops # stores the newest updated set of populations\n",
     "\n",
-    "    # Trim arrays\n",
+    "    # Trim arrays # AI coded, is to remove useless data from initial array size estimate\n",
     "    time_history = time_history[:step_counter + 1]\n",
     "    pop_history = pop_history[:step_counter + 1, :]\n",
     "\n",
@@ -136,8 +152,11 @@
     "        self.final_time = simulation_length\n",
     "        self.num_internal_species = module_for_simulating.num_internal_species\n",
     "\n",
-    "        self.SM_with_reverse_stoichiometry = self.create_SM_with_reverse_stoichiometry()\n",
-    "        self.current_pops_index = self.determine_consumed_species_in_each_reaction()\n",
+    "        # Run these immediately to give useful variables for later\n",
+    "        self.SM_with_reverse_stoichiometry = self.create_SM_with_reverse_stoichiometry() # SM with reverse reactions included\n",
+    "        \n",
+    "        # Finds the indexes (corresponding identically) in the species list for each species involved in each reaction\n",
+    "        self.current_pops_index = self.determine_consumed_species_in_each_reaction() \n",
     "\n",
     "\n",
     "    def create_SM_with_reverse_stoichiometry(self):\n",
@@ -172,13 +191,22 @@
     "\n",
     "    def run_SSA_and_plot_counts(self):\n",
     "\n",
-    "        SM_np = np.array(self.SM_with_reverse_stoichiometry).astype(np.float64)\n",
-    "        current_pops_np = np.array(self.current_pops, dtype=np.float64)\n",
-    "        rates_np = np.array(self.rates_list, dtype=np.float64)\n",
+    "        # ------------------------------------------\n",
+    "        # Assign self variables to local variables so that we can run a NJIT speed-up on the SSA loop later\n",
     "\n",
+    "        SM_np = np.array(self.SM_with_reverse_stoichiometry).astype(np.float64)\n",
+    "\n",
+    "        current_pops_np = np.array(self.current_pops, dtype=np.float64)\n",
+    "\n",
+    "        rates_np = np.array(self.rates_list, dtype=np.float64)\n",
+    "    \n",
     "        current_pops_index_np = [\n",
     "            np.array(lst, dtype=np.int64) for lst in self.current_pops_index\n",
     "        ]\n",
+    "        # ------------------------------------------\n",
+    "\n",
+    "        # ------------------------------------------\n",
+    "        # Run the SSA loop, assigning varaible produced by the function\n",
     "\n",
     "        loop_time_start = time.time()\n",
     "\n",
@@ -200,9 +228,13 @@
     "\n",
     "        loop_time_end = time.time()\n",
     "\n",
+    "        # convert useful properties back into class variables:\n",
+    "\n",
     "        self.current_pops = final_pops.tolist()\n",
     "        self.time_history = time_history\n",
     "        self.pop_history = pop_history\n",
+    "\n",
+    "        # ------------------------------------------\n",
     "\n",
     "        # ============================================================\n",
     "        # PRINT FINAL COUNTS\n",
